k8s/web/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: video-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: riturroy/myvideoapp-web:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 500m
