k8s/web/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: video-platform
spec:
  selector:
    app: web
  ports:
    - port: 3001
      targetPort: 3000
